--- a/views/partials/statueCard.ejs
+++ b/views/partials/statueCard.ejs
@@ -8,32 +8,36 @@
     <div class="statue-info-container">
       <p class="statue-info">Like: <span><%= statue.like %></span></p>
       <p class="statue-info">Dislike: <span><%= statue.dislike %></span></p>
-      <div class="option-container">
-        <span class="statue-info">Flagged: <span class="text-flag"><%= statue.isFlagged %></span></span>
-        <form action="/statue-flag" method="post">
+      <% if (isAdminUser) { %>
+        <div class="option-container">
+          <span class="statue-info">Flagged: <span class="text-flag"><%= statue.isFlagged %></span></span>
+          <form action="/statue-flag" method="post">
+            <input type="hidden" name="statueId" value="<%= statueId %>">
+            <input type="hidden" name="isFlagged" value="<%= statue.isFlagged %>">
+            <button type="submit" class="flag-btn btn alert-danger" data-statue-name="<%= statue.name %>">
+              <%= statue.isFlagged ? 'Unflag' : 'Flag' %>
+            </button>
+          </form>
+        </div>
+        <div class="option-container">
+          <span class="statue-info"><span class="text-private"><%= statue.isPrivate ? 'Private' : 'Public' %></span></span>
+          <form action="/statue-private" method="post">
+            <input type="hidden" name="statueId" value="<%= statueId %>">
+            <input type="hidden" name="isPrivate" value="<%= statue.isPrivate %>">
+            <button type="submit" class="private-btn btn alert-danger" data-statue-name="<%= statue.name %>">
+              <%= statue.isPrivate ? 'Set public' : 'Set private' %>
+            </button>
+          </form>
+        </div>
+      <% } %>
+    </div>
+    <% if (isAdminUser) { %>
+      <div class="button-container">
+        <form action="/statue" method="post" class="statue-remove-form" data-statue-name="<%= statue.name %>">
           <input type="hidden" name="statueId" value="<%= statueId %>">
-          <input type="hidden" name="isFlagged" value="<%= statue.isFlagged %>">
-          <button type="submit" class="flag-btn btn alert-danger" data-statue-name="<%= statue.name %>">
-            <%= statue.isFlagged ? 'Unflag' : 'Flag' %>
-          </button>
+          <button id="removeBtn" type="submit" class="btn alert-danger remove-btn">Remove</button>
         </form>
       </div>
-      <div class="option-container">
-        <span class="statue-info"><span class="text-private"><%= statue.isPrivate ? 'Private' : 'Public' %></span></span>
-        <form action="/statue-private" method="post">
-          <input type="hidden" name="statueId" value="<%= statueId %>">
-          <input type="hidden" name="isPrivate" value="<%= statue.isPrivate %>">
-          <button type="submit" class="private-btn btn alert-danger" data-statue-name="<%= statue.name %>">
-            <%= statue.isPrivate ? 'Set public' : 'Set private' %>
-          </button>
-        </form>
-      </div>
-    </div>
-    <div class="button-container">
-      <form action="/statue" method="post" class="statue-remove-form" data-statue-name="<%= statue.name %>">
-        <input type="hidden" name="statueId" value="<%= statueId %>">
-        <button id="removeBtn" type="submit" class="btn alert-danger remove-btn">Remove</button>
-      </form>
-    </div>
+    <% } %>
   </div>
 </div>
