Add admin by email address

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,7 @@
         <ul>
           <li><a class="btn" href="/">Statues</a></li>
           <li><a class="btn" href="/campus-map">Campus Map</a></li>
+          <li><a class="btn" href="/admin">Admin Portal</a></li>
         </ul>
       </div>
     </section>
