Add infinite scroll for statue list

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -97,3 +97,25 @@ main {
   margin: 0;
   padding: 25px 0;
   background-color: #fff; }
+
+#spinnerContainer {
+  position: relative;
+  display: inline-block;
+  height: 50px;
+  width: 100%; }
+
+#spinner {
+  position: absolute;
+  left: 50%;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #e6B340;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 2s linear infinite; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
