--- a/views/campusMap.ejs
+++ b/views/campusMap.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <% include partials/head %>
-  <link rel="stylesheet" href="/css/campus-map.css">
-  <link rel="stylesheet" href="/css/statue-list.css">
+  <link rel="stylesheet" href="/css/campusMap.css">
+  <link rel="stylesheet" href="/css/statueList.css">
 </head>
 <body>
   <%- include('partials/header') %>
