Fix error with adding an admin

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,7 @@
       <h1>Admin portal</h1>
     </div>
 
-    <form class="container col-sm-8 row mx-auto" action="/add-admin" method="POST">
+    <form class="container col-sm-8 row mx-auto" action="/admin/add" method="POST">
       <% if (success) { %>
         <div class="alert alert-success w-100 text-center" role="alert">
           <%= success %>
