--- a/views/campusMap.ejs
+++ b/views/campusMap.ejs
@@ -130,52 +130,21 @@
             const statue = data.statue;
             const previewPicURL = statue.statuePreviewPicURL;
             const imageURL = previewPicURL ? previewPicURL.substr(0, 95) + '%2f' + previewPicURL.substr(96) : '';
-            const str =
-              '<div class="card" ' + ' id="statue' + marker.id + '"' + '>' +
-                '<img class="card-img-top" src="' + imageURL + '" alt="' + statue.name + '">' +
-                '<div class="card-body">' +
-                  '<h5 class="card-title">' + statue.name + '</h5>' +
-                  '<p class="card-text">' + statue.description + '</p>' +
-                  '<div class="statue-info-container">' +
-                    '<p class="statue-info">Like: <span>' + statue.like + '</span></p>' +
-                    '<p class="statue-info">Dislike: <span>' + statue.dislike + '</span></p>' +
-                    <% if (isAdminUser) { %>
-                      '<div class="option-container">' +
-                        '<span class="statue-info">Flagged: <span class="text-flag">' + statue.isFlagged + '</span></span>' +
-                        '<form class="statue-flag-form" action="/statue-flag" method="post">' +
-                          '<input type="hidden" name="statueId" value="' + marker.id + '">' +
-                          '<input type="hidden" name="isFlagged" value="' + statue.isFlagged + '">' +
-                          '<button class="flag-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">' +
-                          (statue.isFlagged ? 'Unflag' : 'Flag') +
-                          '</button>' +
-                        '</form>' +
-                      '</div>' +
-                      '<div class="option-container">' +
-                        '<span class="statue-info"><span class="text-private">' + (statue.isPrivate ? 'Private' : 'Public') + '</span></span>' +
-                        '<form class="statue-private-form" action="/statue-private" method="post">' +
-                          '<input type="hidden" name="statueId" value="' + marker.id + '">' +
-                          '<input type="hidden" name="isPrivate" value="' + statue.isPrivate + '">' +
-                          '<button class="private-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">' +
-                          (statue.isPrivate ? 'Set public' : 'Set private') +
-                          '</button>' +
-                        '</form>' +
-                      '</div>' +
-                    <% } %>
-                  '</div>' +
-                  <% if (isAdminUser) { %>
-                    '<div class="button-container">' +
-                      '<form class="statue-remove-form" action="/statue" method="post" data-statue-name="' + statue.name + '">' +
-                        '<input type="hidden" name="statueId" value="' + marker.id + '">' +
-                        '<button class="remove-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn">Remove</button>' +
-                      '</form>' +
-                    '</div>' +
-                  <% } %>
-                '</div>' +
-              '</div>';
-            const infowindow = new google.maps.InfoWindow({
-              content: str
-            });
-            infowindow.open(map, marker);
+            $.ajax({
+              url: '/statue-card',
+              data: {
+                statueId: marker.id,
+                previewPicURL: imageURL,
+                statue,
+                isAdminUser: <%= isAdminUser %>,
+              },
+              success: function(statueCardContent) {
+                const infowindow = new google.maps.InfoWindow({
+                  content: statueCardContent
+                });
+                infowindow.open(map, marker);
+              }
+            })
           },
           error: function(xhr) {
 
