--- a/views/statueList.ejs
+++ b/views/statueList.ejs
@@ -9,7 +9,7 @@
   <main>
     <div class="jumbotron text-center col-sm-8 mx-auto mb-4">
       <h1>Statue List</h1>
-      <form action="/statue/search" method="GET" class="col-sm-12">
+      <form action="/statues/search" method="GET" class="col-sm-12">
         <div class="input-group mt-3 mb-3">
           <select name="searchCategory" class="col-sm-3 custom-select">
             <option value="name" <%= searchCategory && searchCategory === 'name' ? 'selected' : '' %>>Name</option>
