Update login screen size

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
       <h1>Login</h1>
       <p>Welcome to Invisible Cities!</p>
     </div>
-    <form class="container col-sm-6" action="/login" method="post">
+    <form class="container col-sm-6 col-md-4" action="/login" method="post">
       <div class="form-group">
         <label for="emailInput">Email address</label>
         <input type="email" name="email" class="form-control" id="emailInput" placeholder="Enter email" required>
