--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
         <label for="passwordInput">Password</label>
         <input type="password" name="password" class="form-control" id="passwordInput" placeholder="Password" required>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary w-100">Submit</button>
       <% if (error) { %>
         <div class="alert alert-danger" role="alert">
           <%= error %>
